classDiagram
    class Owner {
        - name: str
        - available_minutes: int
        - preferences: list[str]
        - pets: list[Pet]
        + add_pet(pet: Pet) -> None
        + remove_pet(pet_name: str) -> None
        + get_pets() -> list[Pet]
        + set_available_time(minutes: int) -> None
    }

    class Pet {
        - name: str
        - species: str
        - age: int
        - special_needs: list[str]
        - tasks: list[Task]
        + add_task(task: Task) -> None
        + remove_task(task_title: str) -> None
        + get_tasks() -> list[Task]
        + get_high_priority_tasks() -> list[Task]
    }

    class Task {
        - title: str
        - duration_minutes: int
        - priority: str
        - task_type: str
        - notes: str
        - status: str
        - frequency: str
        - due_date: str
        + mark_complete() -> None
        + mark_incomplete() -> None
        + is_completed() -> bool
        + get_priority_score() -> int
        + is_feasible(available_minutes: int) -> bool
        + get_next_occurrence(from_date: str) -> Task
        + to_dict() -> dict
    }

    class Schedule {
        - date: str
        - owner: Owner
        - pet: Pet
        - entries: list[dict]
        - skipped_tasks: list[dict]
        + generate() -> None
        + get_total_duration() -> int
        + get_explanation() -> str
        + sort_by_time() -> list[dict]
        + filter_by_status(status: str) -> list[Task]
        + find_conflicts(schedules: list[Schedule])$ -> list[str]
        + display() -> list[dict]
        - _filter_feasible(tasks: list[Task]) -> tuple
        - _sort_by_priority(tasks: list[Task]) -> list[Task]
        - _parse_preferences() -> tuple
        - _assign_times(tasks: list[Task]) -> list[dict]
        - _check_constraints(task, current_dt, remaining_minutes, cutoff_hour, morning_walks_only) -> str
        - _build_reason(task: Task) -> str
    }

    Owner "1" --> "*" Pet : owns
    Pet "1" --> "*" Task : has
    Schedule "1" --> "1" Owner : uses time from
    Schedule "1" --> "1" Pet : schedules tasks for
    Schedule ..> Task : reads and skips
